objects/ASI_JP_TnE_Expense_Category__c.object
<CustomObject>
    <fields>
        <fullName>ASI_JP_TnE_Expense_Category_Order__c</fullName>
        <label>Expense Category Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Greeting_Category__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Greeting Category</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_A_P_Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>A&amp;P Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Name__c</fullName>
        <label>Expense Category Name (KOR)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_en_US__c</fullName>
        <label>Expense Category Name (ENG)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>ASI TnE Expense Category</label>
    <listViews>
        <fullName>ASI_TnE_HK_All_Expense_Categories</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_JP_TnE_Expense_Category__c.ASI_TnE_HK_Expense_Category</value>
        </filters>
        <label>All HK TnE Expense Categories</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_HK_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_ID_All_Expense_Categories</fullName>
        <columns>NAME</columns>
        <columns>ASI_JP_TnE_Expense_Category_Order__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_JP_TnE_Expense_Category__c.ASI_TnE_ID_Expense_Category</value>
        </filters>
        <label>All ID TnE Expense Categories</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_ID_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_KR_All_Expense_Categories</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_KR_Name__c</columns>
        <columns>ASI_JP_TnE_Expense_Category_Order__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_JP_TnE_Expense_Category__c.ASI_TnE_KR_Expense_Category</value>
        </filters>
        <label>All KR TnE Expense Categories</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_MY_All_Expense_Categories</fullName>
        <columns>NAME</columns>
        <columns>ASI_JP_TnE_Expense_Category_Order__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_JP_TnE_Expense_Category__c.ASI_TnE_MY_Expense_Category</value>
        </filters>
        <label>All MY TnE Expense Categories</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_MY_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_PH_All_Expense_Categories</fullName>
        <columns>NAME</columns>
        <columns>ASI_JP_TnE_Expense_Category_Order__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_JP_TnE_Expense_Category__c.ASI_TnE_PH_Expense_Category</value>
        </filters>
        <label>All PH TnE Expense Categories</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_PH_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_SG_All_Expense_Categories</fullName>
        <columns>NAME</columns>
        <columns>ASI_JP_TnE_Expense_Category_Order__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_JP_TnE_Expense_Category__c.ASI_TnE_SG_Expense_Category</value>
        </filters>
        <label>All SG TnE Expense Categories</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_SG_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_TH_All_Expense_Categories</fullName>
        <columns>NAME</columns>
        <columns>ASI_JP_TnE_Expense_Category_Order__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_JP_TnE_Expense_Category__c.ASI_TnE_TH_Expense_Category</value>
        </filters>
        <label>All TH TnE Expense Categories</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_TH_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_TW_All_Expense_Categories</fullName>
        <columns>NAME</columns>
        <columns>ASI_JP_TnE_Expense_Category_Order__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_JP_TnE_Expense_Category__c.ASI_TnE_TW_Expense_Category</value>
        </filters>
        <label>All TW TnE Expense Categories</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_TW_Finance_Users</group>
            <group>ASI_TnE_TW_IT_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name_en_US__c</columns>
        <columns>ASI_JP_TnE_Expense_Category_Order__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_KH_TnE_Expense_Categories</fullName>
        <columns>NAME</columns>
        <columns>ASI_JP_TnE_Expense_Category_Order__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_JP_TnE_Expense_Category__c.ASI_TnE_KH_Expense_Category</value>
        </filters>
        <label>All KH TnE Expense Categories</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_SG_All_Users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Expense Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ASI TnE Expense Categories</pluralLabel>
    <recordTypes>
        <fullName>ASI_JP_TnE_Expense_Category</fullName>
        <active>true</active>
        <label>ASI TnE JP Expense Category</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_HK_Expense_Category</fullName>
        <active>true</active>
        <label>ASI TnE HK Expense Category</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_ID_Expense_Category</fullName>
        <active>true</active>
        <label>ASI TnE ID Expense Category</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_KH_Expense_Category</fullName>
        <active>true</active>
        <label>ASI TnE KH Expense Category</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_KR_Expense_Category</fullName>
        <active>true</active>
        <description>KR Expense Category</description>
        <label>ASI_TnE_KR_Expense_Category</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_MY_Expense_Category</fullName>
        <active>true</active>
        <label>ASI TnE MY Expense Category</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_PH_Expense_Category</fullName>
        <active>true</active>
        <label>ASI TnE PH Expense Category</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_SG_Expense_Category</fullName>
        <active>true</active>
        <label>ASI TnE SG Expense Category</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_TH_Expense_Category</fullName>
        <active>true</active>
        <label>ASI TnE TH Expense Category</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_TW_Expense_Category</fullName>
        <active>true</active>
        <label>ASI TnE TW Expense Category</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>